UnifyNetSDK/gen_ctypes_file/_1_original/HK_PlaySDK.h

//Frame position
typedef struct{
    LONGLONG nFilePos;
    long nFrameNum;
    long nFrameTime;
    long nErrorFrameNum;
    SYSTEMTIME *pErrorTime;
    long nErrorLostFrameNum;
    long nErrorFrameSize;
}FRAME_POS,*PFRAME_POS;
typedef struct PLAYM4_SYSTEM_TIME //绝对时间
{
    DWORD dwYear;   //年
    DWORD dwMon;    //月
    DWORD dwDay;    //日
    DWORD dwHour;   //时
    DWORD dwMin;    //分
    DWORD dwSec;    //秒
    DWORD dwMs;     //毫秒
} PLAYM4_SYSTEM_TIME;
typedef struct
{
    BYTE  *pDataBuf;      //抓图数据buffer
    DWORD dwPicSize;      //实际图片大小
    DWORD dwBufSize;      //数据buffer大小
    DWORD dwPicWidth;     //截图宽
    DWORD dwPicHeight;    //截图高
    DWORD dwReserve;      //多加一个reserve字段
    RECT  *pCropRect;     //选择区域NULL, 同老的抓图接口
}CROP_PIC_INFO;
//ENCRYPT Info
typedef struct{
    long nVideoEncryptType;  //视频加密类型
    long nAudioEncryptType;  //音频加密类型
    long nSetSecretKey;      //是否设置，1表示设置密钥，0表示没有设置密钥
}ENCRYPT_INFO;
///<私有信息模块类型
typedef enum _PLAYM4_PRIDATA_RENDER
{
    PLAYM4_RENDER_ANA_INTEL_DATA    = 0x00000001, //智能分析
    PLAYM4_RENDER_MD                = 0x00000002, //移动侦测
    PLAYM4_RENDER_ADD_POS           = 0x00000004, //POS信息后叠加
    PLAYM4_RENDER_ADD_PIC           = 0x00000008, //图片叠加信息
    PLAYM4_RENDER_FIRE_DETCET       = 0x00000010, //热成像信息
    PLAYM4_RENDER_TEM               = 0x00000020, //温度信息
    PLAYM4_RENDER_TRACK_TEM         = 0x00000040, //轨迹信息
    PLAYM4_RENDER_THERMAL           = 0x00000080, //废气检测和烟火屏蔽信息
}PLAYM4_PRIDATA_RENDER;
typedef enum _PLAYM4_THERMAL_FLAG
{
    PLAYM4_THERMAL_FIREMASK           = 0x00000001, //烟火屏蔽
    PLAYM4_THERMAL_RULEGAS            = 0x00000002, //规则废气检测
    PLAYM4_THERMAL_TARGETGAS          = 0x00000004, //目标废气检测
}PLAYM4_THERMAL_FLAG;
typedef enum _PLAYM4_FIRE_ALARM
{
    PLAYM4_FIRE_FRAME_DIS           = 0x00000001, //火点框显示
    PLAYM4_FIRE_MAX_TEMP            = 0x00000002, //最高温度
    PLAYM4_FIRE_MAX_TEMP_POSITION   = 0x00000004, //最高温度位置显示
    PLAYM4_FIRE_DISTANCE            = 0x00000008, //最高温度距离
}PLAYM4_FIRE_ALARM;
typedef enum _PLAYM4_TEM_FLAG
{
    PLAYM4_TEM_REGION_BOX             = 0x00000001, //框测温
    PLAYM4_TEM_REGION_LINE            = 0x00000002, //线测温
    PLAYM4_TEM_REGION_POINT           = 0x00000004, //点测温
}PLAYM4_TEM_FLAG;
typedef enum _PLAYM4_TRACK_FLAG
{
    PLAYM4_TRACK_PEOPLE               = 0x00000001, //人轨迹
    PLAYM4_TRACK_VEHICLE              = 0x00000002, //车轨迹
}PLAYM4_TRACK_FLAG;
/////////////////////////////////////////////////////////////////////////////////////////////
//Proposed Interface 建议使用的接口
/////////////////////////////////////////////////////////////////////////////////////////////
///<初始化
PLAYM4_API BOOL __stdcall PlayM4_GetPort(LONG* nPort);
PLAYM4_API BOOL __stdcall PlayM4_FreePort(LONG nPort);
PLAYM4_API BOOL __stdcall PlayM4_OpenFile(LONG nPort,LPSTR sFileName);
PLAYM4_API BOOL __stdcall PlayM4_CloseFile(LONG nPort);
PLAYM4_API BOOL __stdcall PlayM4_OpenStream(LONG nPort,PBYTE pFileHeadBuf,DWORD nSize,DWORD nBufPoolSize);
PLAYM4_API BOOL __stdcall PlayM4_CloseStream(LONG nPort);
PLAYM4_API BOOL __stdcall PlayM4_InputData(LONG nPort,PBYTE pBuf,DWORD nSize);
PLAYM4_API BOOL __stdcall PlayM4_SetStreamOpenMode(LONG nPort,DWORD nMode);
PLAYM4_API LONG __stdcall PlayM4_GetStreamOpenMode(LONG nPort);
///<索引
PLAYM4_API BOOL __stdcall PlayM4_SetFileRefCallBack(LONG nPort, void (__stdcall *pFileRefDone)(DWORD nPort,void* nUser),void* nUser);
PLAYM4_API BOOL __stdcall PlayM4_GetRefValue(LONG nPort,BYTE *pBuffer, DWORD *pSize);
PLAYM4_API BOOL __stdcall PlayM4_SetRefValue(LONG nPort,BYTE *pBuffer, DWORD nSize);
PLAYM4_API BOOL __stdcall PlayM4_GetRefValueEx(LONG nPort,BYTE *pBuffer, DWORD *pSize);///< 与PlayM4_GetRefValueEx相比，增加索引帧类型和长度回调
PLAYM4_API BOOL __stdcall PlayM4_GetKeyFramePos(LONG nPort,DWORD nValue, DWORD nType, PFRAME_POS pFramePos);