UnifyNetSDK/haikang/hk_playsdk_wrapper.py


struct_PLAYM4_SYSTEM_TIME.__slots__ = [
    'dwYear',
    'dwMon',
    'dwDay',
    'dwHour',
    'dwMin',
    'dwSec',
    'dwMs',
]
struct_PLAYM4_SYSTEM_TIME._fields_ = [
    ('dwYear', DWORD),
    ('dwMon', DWORD),
    ('dwDay', DWORD),
    ('dwHour', DWORD),
    ('dwMin', DWORD),
    ('dwSec', DWORD),
    ('dwMs', DWORD),
]

PLAYM4_SYSTEM_TIME = struct_PLAYM4_SYSTEM_TIME# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 387

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 399
class struct_anon_408(Structure):
    pass

struct_anon_408.__slots__ = [
    'pDataBuf',
    'dwPicSize',
    'dwBufSize',
    'dwPicWidth',
    'dwPicHeight',
    'dwReserve',
    'pCropRect',
]
struct_anon_408._fields_ = [
    ('pDataBuf', POINTER(BYTE)),
    ('dwPicSize', DWORD),
    ('dwBufSize', DWORD),
    ('dwPicWidth', DWORD),
    ('dwPicHeight', DWORD),
    ('dwReserve', DWORD),
    ('pCropRect', POINTER(RECT)),
]

CROP_PIC_INFO = struct_anon_408# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 399

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 406
class struct_anon_409(Structure):
    pass

struct_anon_409.__slots__ = [
    'nVideoEncryptType',
    'nAudioEncryptType',
    'nSetSecretKey',
]
struct_anon_409._fields_ = [
    ('nVideoEncryptType', c_long),
    ('nAudioEncryptType', c_long),
    ('nSetSecretKey', c_long),
]

ENCRYPT_INFO = struct_anon_409# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 406

enum__PLAYM4_PRIDATA_RENDER = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_ANA_INTEL_DATA = 0x00000001# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_MD = 0x00000002# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_ADD_POS = 0x00000004# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_ADD_PIC = 0x00000008# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_FIRE_DETCET = 0x00000010# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_TEM = 0x00000020# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_TRACK_TEM = 0x00000040# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_RENDER_THERMAL = 0x00000080# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

PLAYM4_PRIDATA_RENDER = enum__PLAYM4_PRIDATA_RENDER# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 417

enum__PLAYM4_THERMAL_FLAG = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 423

PLAYM4_THERMAL_FIREMASK = 0x00000001# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 423

PLAYM4_THERMAL_RULEGAS = 0x00000002# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 423

PLAYM4_THERMAL_TARGETGAS = 0x00000004# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 423

PLAYM4_THERMAL_FLAG = enum__PLAYM4_THERMAL_FLAG# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 423

enum__PLAYM4_FIRE_ALARM = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 430

PLAYM4_FIRE_FRAME_DIS = 0x00000001# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 430

PLAYM4_FIRE_MAX_TEMP = 0x00000002# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 430

PLAYM4_FIRE_MAX_TEMP_POSITION = 0x00000004# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 430

PLAYM4_FIRE_DISTANCE = 0x00000008# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 430

PLAYM4_FIRE_ALARM = enum__PLAYM4_FIRE_ALARM# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 430

enum__PLAYM4_TEM_FLAG = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 436

PLAYM4_TEM_REGION_BOX = 0x00000001# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 436

PLAYM4_TEM_REGION_LINE = 0x00000002# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 436

PLAYM4_TEM_REGION_POINT = 0x00000004# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 436

PLAYM4_TEM_FLAG = enum__PLAYM4_TEM_FLAG# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 436

enum__PLAYM4_TRACK_FLAG = c_int# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 441

PLAYM4_TRACK_PEOPLE = 0x00000001# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 441

PLAYM4_TRACK_VEHICLE = 0x00000002# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 441

PLAYM4_TRACK_FLAG = enum__PLAYM4_TRACK_FLAG# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 441

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 442
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetPort", "cdecl"):
    PlayM4_GetPort = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetPort", "cdecl")
    PlayM4_GetPort.argtypes = [POINTER(LONG)]
    PlayM4_GetPort.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 443
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_FreePort", "cdecl"):
    PlayM4_FreePort = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_FreePort", "cdecl")
    PlayM4_FreePort.argtypes = [LONG]
    PlayM4_FreePort.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 444
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_OpenFile", "cdecl"):
    PlayM4_OpenFile = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_OpenFile", "cdecl")
    PlayM4_OpenFile.argtypes = [LONG, LPSTR]
    PlayM4_OpenFile.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 445
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_CloseFile", "cdecl"):
    PlayM4_CloseFile = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_CloseFile", "cdecl")
    PlayM4_CloseFile.argtypes = [LONG]
    PlayM4_CloseFile.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 446
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_OpenStream", "cdecl"):
    PlayM4_OpenStream = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_OpenStream", "cdecl")
    PlayM4_OpenStream.argtypes = [LONG, PBYTE, DWORD, DWORD]
    PlayM4_OpenStream.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 447
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_CloseStream", "cdecl"):
    PlayM4_CloseStream = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_CloseStream", "cdecl")
    PlayM4_CloseStream.argtypes = [LONG]
    PlayM4_CloseStream.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 448
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_InputData", "cdecl"):
    PlayM4_InputData = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_InputData", "cdecl")
    PlayM4_InputData.argtypes = [LONG, PBYTE, DWORD]
    PlayM4_InputData.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 449
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetStreamOpenMode", "cdecl"):
    PlayM4_SetStreamOpenMode = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetStreamOpenMode", "cdecl")
    PlayM4_SetStreamOpenMode.argtypes = [LONG, DWORD]
    PlayM4_SetStreamOpenMode.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 450
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetStreamOpenMode", "cdecl"):
    PlayM4_GetStreamOpenMode = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetStreamOpenMode", "cdecl")
    PlayM4_GetStreamOpenMode.argtypes = [LONG]
    PlayM4_GetStreamOpenMode.restype = LONG

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 451
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetFileRefCallBack", "cdecl"):
    PlayM4_SetFileRefCallBack = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetFileRefCallBack", "cdecl")
    PlayM4_SetFileRefCallBack.argtypes = [LONG, CFUNCTYPE(UNCHECKED(None), DWORD, POINTER(None)), POINTER(None)]
    PlayM4_SetFileRefCallBack.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 452
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetRefValue", "cdecl"):
    PlayM4_GetRefValue = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetRefValue", "cdecl")
    PlayM4_GetRefValue.argtypes = [LONG, POINTER(BYTE), POINTER(DWORD)]
    PlayM4_GetRefValue.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 453
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_SetRefValue", "cdecl"):
    PlayM4_SetRefValue = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_SetRefValue", "cdecl")
    PlayM4_SetRefValue.argtypes = [LONG, POINTER(BYTE), DWORD]
    PlayM4_SetRefValue.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 454
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetRefValueEx", "cdecl"):
    PlayM4_GetRefValueEx = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetRefValueEx", "cdecl")
    PlayM4_GetRefValueEx.argtypes = [LONG, POINTER(BYTE), POINTER(DWORD)]
    PlayM4_GetRefValueEx.restype = BOOL

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 455
if _libs["lib/win/PlayCtrl.dll"].has("PlayM4_GetKeyFramePos", "cdecl"):
    PlayM4_GetKeyFramePos = _libs["lib/win/PlayCtrl.dll"].get("PlayM4_GetKeyFramePos", "cdecl")
    PlayM4_GetKeyFramePos.argtypes = [LONG, DWORD, DWORD, PFRAME_POS]
    PlayM4_GetKeyFramePos.restype = BOOL
